--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -176,6 +176,7 @@ ul.task-list input[type="checkbox"] {
 
   .card-title {
     color: var(--global-text-color);
+    font-size: 0.875rem;
   }
 
   .card-body {
