--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -176,8 +176,7 @@ ul.task-list input[type="checkbox"] {
 
   .card-title {
     color: var(--global-text-color);
-    font-size: 0.875rem;
-  }
+    font-size: 1.5rem;  }
 
   .card-body {
     padding: 1.25rem 1.25rem 1.25rem 1.25rem;
