--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -176,7 +176,11 @@ ul.task-list input[type="checkbox"] {
 
   .card-title {
     color: var(--global-text-color);
-    font-size: 1.5rem;  }
+    font-family: sans-serif;
+    font-size: 13.5pt;
+    font-weight: normal;
+    font-style: normal;
+    font-size: 1.2rem;  }
 
   .card-body {
     padding: 1.25rem 1.25rem 1.25rem 1.25rem;
