Put the travel section up

--- a/_includes/metadata.liquid
+++ b/_includes/metadata.liquid
@@ -2,6 +2,7 @@
   <!-- Website verification -->
   {% if site.enable_google_verification %}
     <meta name="google-site-verification" content="{{ site.google_site_verification }}">
+    google-site-verification=Drv9VlgLtwHUs1lwpjfMLYrq60TahBaTiMjalRV9r8s
   {% endif %}
   {% if site.enable_bing_verification %}
     <meta name="msvalidate.01" content="{{ site.bing_site_verification }}">
