--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -180,7 +180,8 @@ ul.task-list input[type="checkbox"] {
     font-size: 13.5pt;
     font-weight: normal;
     font-style: normal;
-    font-size: 1.2rem;  }
+    font-size: 1.2rem;
+  }
 
   .card-body {
     padding: 1.25rem 1.25rem 1.25rem 1.25rem;
